# slambook_14_notes

./: README.md
ceres_curve_fitting/: main.cpp
ceres_curve_fitting/.kdev4/: ceres_curve_fitting.kdev4
ch10_back_end_1/ceres_custombundle/: SnavelyReprojectionError.h  ceresBundle.cpp  final.ply
ch10_back_end_1/ceres_custombundle/common/: BALProblem.h
ch10_back_end_1/g2o_custombundle/: g2o_bal_class.h  g2o_bundle.cpp
ch10_back_end_1/g2o_custombundle/.kdev4/: g2o_custombundle.kdev4
ch10_back_end_1/g2o_custombundle/common/: BALProblem.cpp  BALProblem.h  BundleParams.h  (+1 more)
ch11_back_end_2/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp
ch12_loop_closure/: feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
ch13_Mpping/dense_RGBD/: octomap_mapping.cpp  pointcloud_mapping.cpp
ch13_Mpping/dense_monocular/: dense_mapping.cpp
ch7_VO1/: CMakeLists.txt  ch7_VO1.kdev4  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch7_VO1/.kdev4/: ch7_VO1.kdev4
ch8_VO2/LKFlow/: CMakeLists.txt  useLK.cpp
ch8_VO2/directMethod/: CMakeLists.txt  direct_semidense.cpp  direct_sparse.cpp
g2o_curve_fitting/: main.cpp
g2o_curve_fitting/.kdev4/: g2o_curve_fitting.kdev4
imageBasics/: CMakeLists.txt  imageBasics.kdev4  main.cpp
imageBasics/.kdev4/: imageBasics.kdev4
joinMap/: CMakeCache.txt  Makefile  cmake_install.cmake  joinMap  joinMap.cpp
joinMap/.kdev4/: joinMap.kdev4
useSophus/: CMakeLists.txt  main.cpp
useSophus/.kdev4/: useSophus.kdev4
(+20 files in other folders)
